
<?xml version="1.0"?>
<package>
  <name>vehicle</name>
  <version>1.0.2</version>
  <description>
      Offers topics and services related to the state of the world in Gazebo.
  </description>

   <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_world_plugin_loader</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>object_msgs_tools</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <run_depend>gazebo_world_plugin_loader</run_depend>
  <run_depend>object_msgs</run_depend>
  <run_depend>object_msgs_tools</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
